[gd_scene load_steps=44 format=3 uid="uid://dqrujxar1ft6l"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_avsqt"]
[ext_resource type="Texture2D" uid="uid://05eph82rjipj" path="res://Assets/Sprite/Net.png" id="3_5dlip"]
[ext_resource type="AudioStream" uid="uid://bou413j3p3ast" path="res://Assets/Sound/410259__adrimb86__fairy_sound.wav" id="4_hybtw"]
[ext_resource type="Texture2D" uid="uid://5ta065ey2kax" path="res://Assets/Sprite/Tilemap/Spinning_effect_magic.png" id="5_6aupx"]
[ext_resource type="Texture2D" uid="uid://xg0yuvicql3r" path="res://Assets/Sprite/star_01.png" id="6_ychg6"]
[ext_resource type="Texture2D" uid="uid://bp0onx0tip87b" path="res://Assets/Sprite/Wizard_animated.png" id="6_ytly8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_77txr"]
size = Vector2(10, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_qii1g"]
atlas = ExtResource("5_6aupx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvck6"]
atlas = ExtResource("5_6aupx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2mt6"]
atlas = ExtResource("5_6aupx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdtxo"]
atlas = ExtResource("5_6aupx")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5wfa"]
atlas = ExtResource("5_6aupx")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p80ra"]
atlas = ExtResource("5_6aupx")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhwn7"]
atlas = ExtResource("5_6aupx")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjtak"]
atlas = ExtResource("5_6aupx")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_17m2q"]
atlas = ExtResource("5_6aupx")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvmj2"]
atlas = ExtResource("5_6aupx")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbyc8"]
atlas = ExtResource("5_6aupx")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70raj"]
atlas = ExtResource("5_6aupx")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_v5iq7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qii1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvck6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2mt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdtxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5wfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p80ra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhwn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjtak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17m2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvmj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbyc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70raj")
}],
"loop": true,
"name": &"Spell_Effect",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_6w37k"]
atlas = ExtResource("6_ytly8")
region = Rect2(17, 17, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_snd44"]
atlas = ExtResource("6_ytly8")
region = Rect2(34, 17, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4eff"]
atlas = ExtResource("6_ytly8")
region = Rect2(0, 34, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rl0j"]
atlas = ExtResource("6_ytly8")
region = Rect2(34, 17, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hc67"]
atlas = ExtResource("6_ytly8")
region = Rect2(0, 34, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fa3g"]
atlas = ExtResource("6_ytly8")
region = Rect2(34, 17, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhidy"]
atlas = ExtResource("6_ytly8")
region = Rect2(0, 34, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_35ex7"]
atlas = ExtResource("6_ytly8")
region = Rect2(34, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1dv3"]
atlas = ExtResource("6_ytly8")
region = Rect2(34, 17, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwo8j"]
atlas = ExtResource("6_ytly8")
region = Rect2(0, 34, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gk04"]
atlas = ExtResource("6_ytly8")
region = Rect2(34, 17, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma353"]
atlas = ExtResource("6_ytly8")
region = Rect2(0, 34, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_llj7p"]
atlas = ExtResource("6_ytly8")
region = Rect2(34, 17, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmxhm"]
atlas = ExtResource("6_ytly8")
region = Rect2(0, 34, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_esj4k"]
atlas = ExtResource("6_ytly8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vw6iv"]
atlas = ExtResource("6_ytly8")
region = Rect2(17, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vaypa"]
atlas = ExtResource("6_ytly8")
region = Rect2(34, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7amp"]
atlas = ExtResource("6_ytly8")
region = Rect2(0, 17, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ulbay"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6w37k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snd44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4eff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rl0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hc67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fa3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhidy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35ex7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1dv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwo8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gk04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma353")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llj7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmxhm")
}],
"loop": true,
"name": &"cast_loop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_esj4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vw6iv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaypa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7amp")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_npudd"]
radius = 8.2922

[sub_resource type="Gradient" id="Gradient_jc6q5"]
offsets = PackedFloat32Array(0, 0.295082, 0.508197, 0.704918, 0.827869)
colors = PackedColorArray(0.758047, 0.360078, 0.988015, 1, 1, 1, 1, 1, 0.571716, 0.304576, 0.995544, 1, 1, 1, 1, 1, 0.616777, 0.429531, 0.992063, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_asm3t"]
gradient = SubResource("Gradient_jc6q5")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_p5xja"]
lifetime_randomness = 0.84
particle_flag_disable_z = true
emission_shape = 2
emission_sphere_radius = 6.37
angle_min = -418.1
angle_max = 412.5
spread = 57.588
gravity = Vector3(0, -10.115, 0)
scale_min = 0.01
scale_max = 0.05
color_ramp = SubResource("GradientTexture1D_asm3t")

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 3
motion_mode = 1
script = ExtResource("1_avsqt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_77txr")

[node name="MagicSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_hybtw")
volume_db = -7.7
pitch_scale = 0.62

[node name="SpellEffect" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2.085, 2.085)
sprite_frames = SubResource("SpriteFrames_v5iq7")
animation = &"Spell_Effect"
autoplay = "Spell_Effect"
frame_progress = 0.74472
offset = Vector2(0, 0.765)

[node name="PlayerAnimatedSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_ulbay")
animation = &"cast_loop"

[node name="Net" type="Area2D" parent="."]

[node name="NetSprite" type="Sprite2D" parent="Net"]
texture_filter = 1
position = Vector2(0, -4)
texture = ExtResource("3_5dlip")
offset = Vector2(0, -9.1)

[node name="NetCollision" type="CollisionShape2D" parent="Net" groups=["net"]]
position = Vector2(-2.345, -15.425)
shape = SubResource("CircleShape2D_npudd")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Net"]
position = Vector2(-2.225, -15.69)
amount = 100
process_material = SubResource("ParticleProcessMaterial_p5xja")
texture = ExtResource("6_ychg6")
trail_lifetime = 1.07

[connection signal="body_entered" from="Net" to="." method="_on_net_body_entered"]
